# cubeapp

.github/workflows/: flatpak.yml
cubestruct/: Cargo.toml
cubestruct/src/: coord_cube.rs  cubestate.rs  cubicle_indexed.rs  cubie.rs  cubie_cube.rs  cubiestate.rs  dumb.rs  facelet_cube.rs  iter_2cycles.rs  lib.rs
gui/: Cargo.toml  build.rs
gui/flatpak/: PuzzleTime.desktop  PuzzleTime.yml
gui/resources/: bluetooth-dialog.blp  main-window.blp  main.css  resources.gresource.xml  stat-info-dialog.blp  stat-item.blp  stats.blp  timer.blp
gui/src/: bluetooth.rs  main.rs  prelude.rs  stat_object.rs  stats.rs  timer.rs
qiyi_smartcube/: Cargo.toml
qiyi_smartcube/src/: cube.rs  lib.rs  messages.rs  protocol.rs
smartcube/: Cargo.toml
smartcube/src/: lib.rs
