[package]
name = "puzzletime"
version = "0.1.0"
edition = "2021"

[dependencies]
smartcube = { path = "../smartcube" }
qiyi_smartcube = { path = "../qiyi_smartcube" }
gtk = { package = "gtk4", version = "0.8", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.6", features = ["v1_5"] }
futures = "0.3"
tokio = { version = "1.38", features = ["rt-multi-thread"] }

[build-dependencies]
glib-build-tools = "0.19"
